@@ -1,0 +1,22 @@
+#import "cocos2d.h"
+
+//CLASS INTERFACE
+@interface AppController : NSObject <UIAccelerometerDelegate, UIAlertViewDelegate, UITextFieldDelegate, UIApplicationDelegate>
+{
+	UIWindow	*window;
+}
+@end
+
+@interface HiResDemo: CCLayer
+{
+}
+-(NSString*) title;
+-(NSString*) subtitle;
+@end
+
+
+@interface Test1 : HiResDemo
+{}
+@end
+
+
