@@ -4,6 +4,7 @@ version 0.99.4 - xx-MMM-2010
  . [FIX] CocosDenshion: Fixed bug in CDBufferManager, added test case to FadeToGrey, fixed Info.plist
  . [FIX] RenderTexture: works in HiRes mode (issue #898)
  . [FIX] Director: Avoid re-scale initial issue (issue #899, issue #350)
+ . [FIX] Director: convertToUI works as expected (issue #902)
  . [FIX] Director: renamed mainLoop -> drawScene
  . [FIX] Director: appended '_' to ivars (eg: FPSLabel -> FPSLabel_)
 
